# toradex-easyinstall-server-rs

./: Cargo.toml
src/: main.rs
